--- a/res/layout-large/activity_dashboard.xml
+++ b/res/layout-large/activity_dashboard.xml
@@ -116,7 +116,41 @@
                     </FrameLayout>
                 </TableRow>
                 <TableRow>
+                    <FrameLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginTop="15dp">
 
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal">
+
+                            <ImageView
+                                android:id="@+id/captureVitalsButton"
+                                android:layout_centerInParent="true"
+                                android:layout_width="220dp"
+                                android:layout_height="220dp"
+                                android:layout_alignParentTop="true"
+                                android:contentDescription="@string/dashboard_vitals_icon_label"
+                                android:onClick="onCaptureVitalsCallback"
+                                android:clickable="true"/>
+
+                            <TextView
+                                android:id="@+id/captureVitalsLabel"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/captureVitalsButton"
+                                android:layout_centerHorizontal="true"
+                                android:layout_gravity="center"
+                                android:clickable="true"
+                                android:paddingTop="10dp"
+                                android:onClick="onCaptureVitalsCallback"
+                                android:text="@string/dashboard_vitals_icon_label"
+                                android:textSize="34sp"/>
+                        </RelativeLayout>
+                    </FrameLayout>
                     <FrameLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
