--- a/res/layout-normal/activity_dashboard.xml
+++ b/res/layout-normal/activity_dashboard.xml
@@ -116,7 +116,41 @@
                 </FrameLayout>
             </TableRow>
             <TableRow>
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginTop="10dp">
 
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal">
+
+                        <ImageView
+                            android:id="@+id/captureVitalsButton"
+                            android:layout_centerInParent="true"
+                            android:layout_width="110dp"
+                            android:layout_height="110dp"
+                            android:layout_alignParentTop="true"
+                            android:contentDescription="@string/dashboard_registry_icon_label"
+                            android:onClick="onCaptureVitalsCallback"
+                            android:clickable="true"/>
+
+                        <TextView
+                            android:id="@+id/captureVitalsLabel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/captureVitalsButton"
+                            android:layout_centerHorizontal="true"
+                            android:layout_gravity="center"
+                            android:clickable="true"
+                            android:paddingTop="10dp"
+                            android:text="@string/dashboard_vitals_icon_label"
+                            android:onClick="onCaptureVitalsCallback"
+                            android:textSize="22sp"/>
+                    </RelativeLayout>
+                </FrameLayout>
                 <FrameLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
