--- a/res/layout/activity_find_visits.xml
+++ b/res/layout/activity_find_visits.xml
@@ -23,18 +23,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.openmrs.client.activities.FindActiveVisitsActivity">
 
-    <ListView android:id="@+id/visits_list_view"
+    <ListView android:id="@+id/visitsListView"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"/>
 
-    <TextView android:id="@+id/empty_visits_list_view"
+    <TextView android:id="@+id/emptyVisitsListViewLabel"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
               android:visibility="gone" />
 
-    <ProgressBar android:id="@+id/visits_list_view_loading"
+    <ProgressBar android:id="@+id/visitsListViewLoading"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
